--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,20 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# data
+data/*.csv
+data/*.tsv
+data/*.zip
+data/*.gsv
+data/*.json
+
+# models
+models/*.pickle
+models/*.pkl
+
+# Mac Stuff
+.DS_Store
+
+# vscode Stuff
+.vscode
